[package]
name = "lang-code"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Library of language codes"
readme = "README.md"
repository = "https://github.com/DoumanAsh/lang-code"
license = "BSL-1.0"
keywords = ["language", "iso639"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
# Specifies to include language name into data
lang-name = []

[package.metadata.docs.rs]
features = ["lang-name"]
